--- a/src/blocks/gallery-masonry/styles/editor.scss
+++ b/src/blocks/gallery-masonry/styles/editor.scss
@@ -9,7 +9,8 @@
 	}
 
 	// Fixes issue where the outline does not fully render due to the outside nature of the core outline style applied.
-	.is-appender {
+	.is-appender,
+	.components-coblocks-gallery-uploader {
 		border: 1px dashed $dark-gray-150;
 		outline: none;
 
