--- a/src/blocks/gallery-stacked/styles/editor.scss
+++ b/src/blocks/gallery-stacked/styles/editor.scss
@@ -2,17 +2,23 @@
 	// Fix issue where selected images are not wider than the viewport.
 	.coblocks-gallery--item:not(.is-appender) .coblocks-gallery--figure {
 		display: inline-block;
-		// width: auto !important;
 	}
 
 	.has-fullwidth-images .coblocks-gallery--figure {
 		width: 100% !important;
 	}
 
-	.is-appender {
-		// Remove unnecessary margin applied to the core appender.
-		margin-bottom: 0;
+	// Fixes issue where the outline does not fully render due to the outside nature of the core outline style applied.
+	.is-appender,
+	.components-coblocks-gallery-uploader {
+		border: 1px dashed $dark-gray-150;
+		margin-bottom: 0; // Remove unnecessary margin applied to the core appender.
+		outline: none;
 		width: 100%;
+
+		&:hover {
+			border-color: $dark-gray-500;
+		}
 	}
 
 	li:last-child .coblocks-gallery--figure {
