--- a/src/components/block-gallery/styles/editor.scss
+++ b/src/components/block-gallery/styles/editor.scss
@@ -1,5 +1,6 @@
 @import "editor/gallery-item";
 @import "editor/remove-gallery-item-button";
+@import "editor/uploader";
 @import "editor/radius";
 @import "editor/flickity-arrows";
 @import "editor/core-themes";
