--- a/src/components/block-gallery/styles/editor/_radius.scss
+++ b/src/components/block-gallery/styles/editor/_radius.scss
@@ -11,6 +11,11 @@
 			border-top-right-radius: #{$i}px !important;
 		}
 
+		.coblocks-gallery--figure .is-appender,
+		.components-coblocks-gallery-uploader.components-button {
+			border-radius: #{$i}px;
+		}
+
 		figcaption {
 			border-bottom-left-radius: #{$i - 4}px !important;
 			border-bottom-right-radius: #{$i - 4}px !important;
