Fix Media Card Row block UI

--- a/src/blocks/media-card/styles/editor.scss
+++ b/src/blocks/media-card/styles/editor.scss
@@ -195,6 +195,11 @@
 
 	// Remove editor margins that do not exist on the frontend.
 	.wp-block-coblocks-media-card__content {
+		[data-block] {
+			margin-bottom: 0;
+			margin-top: 0;
+		}
+
 		> .editor-inner-blocks {
 			> .editor-block-list__layout {
 				> .wp-block {
@@ -228,4 +233,3 @@
 .components-block-coblocks-media-card-maxwidth-range {
 	margin-bottom: 0.7em;
 }
-
