--- a/src/blocks/form/styles/editor.scss
+++ b/src/blocks/form/styles/editor.scss
@@ -1,44 +1,13 @@
-@import 'help-message.scss';
+@import "help-message.scss";
 
 .editor-block-list__block[data-type="coblocks/form"] {
-
-	.components-placeholder {
-		padding: 24px;
-
-		input[type='text'] {
-			width: 100%;
-			outline-width: 0;
-			outline-style: none;
-			line-height: 16px;
-		}
-
-		.components-placeholder__label svg {
-			margin-right: 1ch;
-		}
-
-		.help-message,
-		.components-placeholder__fieldset {
-			text-align: left;
-		}
-
-		.help-message {
-			width: 100%;
-			margin: -18px 0 28px;
-		}
-
-		.components-base-control {
-			margin-bottom: 16px;
-			width: 100%;
-		}
-	}
-
 	.coblocks-field-label {
 		display: flex;
 		flex-direction: row;
 
 		.components-base-control {
-			margin-top:-1px;
 			margin-bottom: -3px;
+			margin-top: -1px;
 
 			&.coblocks-field-label__required {
 				.components-form-toggle {
@@ -52,7 +21,7 @@
 		}
 
 		.required {
-			color: #eb0001;;
+			color: $alert-red;
 			word-break: normal;
 		}
 
@@ -67,9 +36,8 @@
 		padding: 0;
 	}
 
-	// Duplicated to elevate specificity in order to overwrite core styles
 	.coblocks-field-label__input.coblocks-field-label__input.coblocks-field-label__input {
-		border-color: #ffffff;
+		border-color: $white;
 		border-radius: 0;
 		font-weight: 600;
 		margin: 0;
@@ -78,7 +46,7 @@
 		width: auto;
 
 		&:focus {
-			border-color: #ffffff;
+			border-color: $white;
 			box-shadow: none;
 		}
 	}
@@ -88,78 +56,22 @@
 	}
 
 	.coblocks-field {
-		// done to increase elevate specificity in order to overwrite calypso styles
 		.components-text-control__input.components-text-control__input {
-				width: 100%;
+			width: 100%;
 		}
+
 		.components-text-control__input,
 		.components-textarea-control__input {
-			color: #72777c;
 			padding: 10px 8px;
 		}
 	}
 
-	.coblocks-field-checkbox__checkbox.coblocks-field-checkbox__checkbox.coblocks-field-checkbox__checkbox {
-		float: left;
-	}
-
-	// Duplicated to elevate specificity in order to overwrite core styles
-	.coblocks-field-multiple__list.coblocks-field-multiple__list {
-		list-style-type: none;
-		margin: 0;
-
-		&:empty {
-			display: none;
-		}
-	}
-
-	.coblocks-option {
-		display: flex;
-		align-items: center;
-		margin: 0;
-	}
-
-	.coblocks-option__type.coblocks-option__type {
-		margin-top: 0;
-	}
-
-	// Duplicated to elevate specificity in order to overwrite core styles
-	.coblocks-option__input.coblocks-option__input.coblocks-option__input {
-		border-color: #ffffff;
-		border-radius: 0;
-		flex-grow: 1;
-
-		&:hover {
-			border-color: #357cb5;
-		}
-
-		&:focus {
-			border-color: #e3e5e8;
-			box-shadow: none;
-		}
-	}
-	// Duplicated to elevate specificity in order to overwrite calypso styles
-	.coblocks-option__remove.coblocks-option__remove {
-		padding: 6px;
-		vertical-align: bottom;
-	}
-
-	.coblocks-field-multiple__add-option {
-		margin-left: -6px;
-		padding: 4px;
-		padding-right: 8px;
-
-		svg {
-			margin-right: 12px;
-		}
-	}
-
 	.coblocks-field-checkbox .components-base-control__label {
-		display: flex;
 		align-items: center;
+		display: flex;
 
 		.coblocks-field-label {
-			flex-grow:1;
+			flex-grow: 1;
 		}
 
 		.coblocks-field-label__input {
