--- a/src/blocks/form/styles/help-message.scss
+++ b/src/blocks/form/styles/help-message.scss
@@ -1,20 +1,24 @@
 .coblocks-help-message {
 	display: flex;
 	font-size: 13px;
-	line-height: 1.4em;
+	line-height: 1.4;
 	margin-bottom: 1em;
 	margin-top: -0.5em;
+
 	svg {
 		margin-right: 5px;
 		min-width: 24px;
 	}
+
 	> span {
 		margin-top: 2px;
 	}
+
 	&.is-error {
-		color: #eb0001;
+		color: $alert-red;
+
 		svg {
-			fill: #eb0001;
+			fill: $alert-red;
 		}
 	}
 }
