--- a/src/blocks/form/styles/editor.scss
+++ b/src/blocks/form/styles/editor.scss
@@ -51,10 +51,6 @@
 		}
 	}
 
-	input.components-text-control__input {
-		line-height: 16px;
-	}
-
 	.coblocks-field {
 		.components-text-control__input.components-text-control__input {
 			width: 100%;
@@ -63,6 +59,7 @@
 		.components-text-control__input,
 		.components-textarea-control__input {
 			padding: 10px 8px;
+			pointer-events: none;
 		}
 	}
 
