--- a/src/blocks/form/styles/help-message.scss
+++ b/src/blocks/form/styles/help-message.scss
@@ -1,9 +1,10 @@
 .coblocks-help-message {
 	display: flex;
 	font-size: 13px;
+	font-style: italic;
 	line-height: 1.4;
-	margin-bottom: 1em;
-	margin-top: -0.5em;
+	margin-bottom: 1.4em;
+	margin-top: -1.25em;
 
 	svg {
 		margin-right: 5px;
