Tweak advanced form cta style

--- a/src/blocks/form/styles/editor.scss
+++ b/src/blocks/form/styles/editor.scss
@@ -78,7 +78,8 @@
 	}
 }
 
-.components-coblocks-advanced-form-cta {
-	display: block;
-	margin-bottom: 1.5em;
+.components-coblocks-advanced-forms-cta {
+	h3 {
+		margin-bottom: 0.5em;
+	}
 }
