--- a/src/components/orientation/styles/editor.scss
+++ b/src/components/orientation/styles/editor.scss
@@ -19,7 +19,7 @@
 	.components-button-group .components-button {
 		appearance: none;
 		background: $white;
-		border: 1px solid #8d96a0;
+		border: 1px solid $dark-gray-150;
 		box-shadow: none;
 		color: $dark-gray-500;
 		height: 33px;
