--- a/src/components/responsive-tabs-control/styles/editor.scss
+++ b/src/components/responsive-tabs-control/styles/editor.scss
@@ -16,9 +16,9 @@
 	&-item {
 		appearance: none;
 		background: $white;
-		border: 1px solid #8d96a0;
+		border: 1px solid $dark-gray-150;
 		border-radius: 4px;
-		color: #6c7781;
+		color: $dark-gray-300;
 		height: 28px;
 		line-height: 1;
 		margin: 0;
