--- a/src/sidebars/block-manager/styles/editor.scss
+++ b/src/sidebars/block-manager/styles/editor.scss
@@ -93,7 +93,7 @@
 
 	.coblocks-block-manager__error {
 		background: #fff;
-		color: $red;
+		color: $alert-red;
 		margin-top: -16px;
 		padding: 8px;
 		position: sticky;
