--- a/src/blocks/click-to-tweet/styles/editor.scss
+++ b/src/blocks/click-to-tweet/styles/editor.scss
@@ -52,7 +52,7 @@
 
 	//Top toolbar styling for the Twitter username field
 	.edit-post-header-toolbar__block-toolbar &__via {
-		border-color: #8d96a0;
+		border-color: $dark-gray-150;
 		border-radius: 3px;
 		box-shadow: 0 0 0 transparent;
 		margin: 4px;
