--- a/src/components/block-gallery/styles/editor/_gallery-item.scss
+++ b/src/components/block-gallery/styles/editor/_gallery-item.scss
@@ -6,14 +6,14 @@
 	}
 
 	img:focus {
-		box-shadow: inset 0 0 0 4px #0085ba;
+		box-shadow: inset 0 0 0 4px $blue;
 		outline: none;
 	}
 
 	.is-selected {
 		&::after {
 			bottom: 0;
-			box-shadow: inset 0 0 0 4px #0085ba;
+			box-shadow: inset 0 0 0 4px $blue;
 			content: "";
 			left: 0;
 			position: absolute;
