--- a/src/components/dimensions-control/styles/editor.scss
+++ b/src/components/dimensions-control/styles/editor.scss
@@ -4,7 +4,7 @@
 
 		&__mobile-controls-item {
 			background: #fff;
-			border: 1px solid #8d96a0;
+			border: 1px solid $dark-gray-150;
 			border-radius: 4px 0 0 4px;
 			box-shadow: none;
 			color: $dark-gray-500;
@@ -182,20 +182,20 @@
 			.components-button {
 				background: #fff;
 				border-color: #e2e4e7;
-				text-transform: uppercase;
-				line-height: 20px;
-				font-size: 10px;
-				padding: 0;
-				text-shadow: none;
-				box-shadow: none;
-				color: #6c7781;
-				width: 22px;
-				height: 22px;
-				text-align: center;
-				justify-content: center;
-				position: relative;
-				top: -1px;
 				box-shadow: none !important;
+				box-shadow: none;
+				color: $dark-gray-300;
+				font-size: 10px;
+				height: 22px;
+				justify-content: center;
+				line-height: 20px;
+				padding: 0;
+				position: relative;
+				text-align: center;
+				text-shadow: none;
+				text-transform: uppercase;
+				top: -1px;
+				width: 22px;
 
 				&:hover {
 					color: #191e23;
@@ -238,7 +238,7 @@
 
 		&_sync.components-button.is-small {
 			background: #fff;
-			border: 1px solid #8d96a0;
+			border: 1px solid $dark-gray-150;
 			border-radius: 0;
 			border-bottom-right-radius: 4px;
 			border-top-right-radius: 4px;
