--- a/src/components/typography-controls/styles/editor.scss
+++ b/src/components/typography-controls/styles/editor.scss
@@ -7,7 +7,7 @@
 		.components-select-control__input {
 			appearance: none;
 			background: 0 0;
-			border: 1px solid #8d96a0;
+			border: 1px solid $dark-gray-150;
 			border-radius: 4px;
 			box-shadow: 0 0 0 transparent;
 			color: #555;
