Tweak #fff to $white sass variable

--- a/src/blocks/buttons/styles/editor.scss
+++ b/src/blocks/buttons/styles/editor.scss
@@ -11,7 +11,7 @@
 					.wp-block {
 						.editor-block-list__block-edit {
 							.block-library-button__inline-link {
-								background: #fff;
+								background: $white;
 								box-shadow: 0 0 0 1px #ced2d6;
 								position: absolute;
 								z-index: 99;
