--- a/src/blocks/media-card/styles/editor.scss
+++ b/src/blocks/media-card/styles/editor.scss
@@ -69,7 +69,7 @@
 
 			&::after {
 				background: #0085ba;
-				border: 2px solid #fff;
+				border: 2px solid $white;
 				border-radius: 50%;
 				bottom: -7px;
 				content: "";
