--- a/src/blocks/shape-divider/styles/editor.scss
+++ b/src/blocks/shape-divider/styles/editor.scss
@@ -31,7 +31,7 @@
 
 		&::after {
 			background: #0085ba;
-			border: 2px solid #fff;
+			border: 2px solid $white;
 			border-radius: 50%;
 			bottom: 4px;
 			content: "";
