--- a/src/components/size-control/styles/editor.scss
+++ b/src/components/size-control/styles/editor.scss
@@ -31,7 +31,7 @@
 			&:active {
 				background: #555d66;
 				border-color: #555d66;
-				color: #fff;
+				color: $white;
 				cursor: default;
 			}
 		}
