--- a/src/blocks/hero/styles/editor.scss
+++ b/src/blocks/hero/styles/editor.scss
@@ -100,7 +100,7 @@
 				}
 			}
 
-			&.is-hero-resizing{
+			&.is-hero-resizing {
 				.wp-block-coblocks-hero__box {
 					&.is-resizing {
 						&::after {
@@ -140,7 +140,7 @@
 		margin-bottom: 2em;
 
 		div {
-			background: #fff;
+			background: $white;
 			padding: 1px;
 		}
 
@@ -159,17 +159,17 @@
 
 			&:hover {
 				background: #e3e4e7;
-				box-shadow: inset 0 0 0 1px #555d66, inset 0 0 0 2px #fff;
+				box-shadow: inset 0 0 0 1px #555d66, inset 0 0 0 2px $white;
 			}
 
 			&:active:enabled {
 				background: #e3e4e7;
-				box-shadow: inset 0 0 0 1px #555d66, inset 0 0 0 2px #fff;
+				box-shadow: inset 0 0 0 1px #555d66, inset 0 0 0 2px $white;
 			}
 
 			&:focus:enabled {
 				background: #e3e4e7;
-				box-shadow: inset 0 0 0 1px #555d66, inset 0 0 0 2px #fff;
+				box-shadow: inset 0 0 0 1px #555d66, inset 0 0 0 2px $white;
 			}
 		}
 
