--- a/src/styles/admin/_modal-frame.scss
+++ b/src/styles/admin/_modal-frame.scss
@@ -119,7 +119,7 @@
 }
 .coblocks-saved {
 	background: #39b54a;
-	color: #fff;
+	color: $white;
 	padding: 10px 15px;
 	font-size: 14px;
 	border-radius: 4px;
