--- a/src/styles/admin/_tooltips.scss
+++ b/src/styles/admin/_tooltips.scss
@@ -26,7 +26,7 @@
 
 [class*="hint--"]::after {
 	background: #333;
-	color: #fff;
+	color: $white;
 	padding: 6px 8px 7px 9px;
 	font-size: 12px;
 	line-height: 11px;
@@ -40,7 +40,6 @@
 	visibility: visible;
 	opacity: 1;
 }
-
 
 [class*="hint--"][aria-label]::after {
 	content: attr(aria-label);
