--- a/src/blocks/click-to-tweet/styles/editor.scss
+++ b/src/blocks/click-to-tweet/styles/editor.scss
@@ -67,8 +67,8 @@
 		}
 
 		&:focus {
-			border-color: #00a0d2;
-			box-shadow: 0 0 0 1px #00a0d2;
+			border-color: $blue-medium-500;
+			box-shadow: 0 0 0 1px $blue-medium-500;
 			color: #191e23;
 			outline-offset: -2px;
 			outline: 2px solid transparent;
