--- a/src/components/responsive-tabs-control/styles/editor.scss
+++ b/src/components/responsive-tabs-control/styles/editor.scss
@@ -37,8 +37,8 @@
 		}
 
 		&:focus {
-			border-color: #00a0d2 !important;
-			color: #00a0d2;
+			border-color: $blue-medium-500 !important;
+			color: $blue-medium-500;
 			outline: 2px solid transparent;
 			outline-offset: -2px;
 		}
@@ -64,7 +64,7 @@
 			z-index: 1;
 
 			&:focus {
-				background: #00a0d2;
+				background: $blue-medium-500;
 			}
 		}
 
