--- a/src/components/dimensions-control/styles/editor.scss
+++ b/src/components/dimensions-control/styles/editor.scss
@@ -29,7 +29,7 @@
 
 			&:hover {
 				border-color: $dark-gray-500;
-				color: #191e23;
+				color: $dark-gray-900;
 			}
 
 			&:focus:enabled {
@@ -161,7 +161,7 @@
 
 			&:hover {
 				border-color: $dark-gray-500;
-				color: #191e23;
+				color: $dark-gray-900;
 			}
 
 			&:active:enabled {
@@ -198,7 +198,7 @@
 				width: 22px;
 
 				&:hover {
-					color: #191e23;
+					color: $dark-gray-900;
 					border-color: $dark-gray-500;
 				}
 
@@ -211,7 +211,7 @@
 
 				&:not(.is-primary):hover {
 					background: $white;
-					color: #191e23;
+					color: $dark-gray-900;
 					box-shadow: none;
 				}
 
