Tweak #555d66 to $dark-gray-500

--- a/src/blocks/accordion/styles/editor.scss
+++ b/src/blocks/accordion/styles/editor.scss
@@ -32,7 +32,7 @@
 		border-radius: 0;
 		border: 1px dashed #d3d5d8;
 		box-shadow: none !important;
-		color: #555d66;
+		color: $dark-gray-500;
 		font-size: 14px;
 		height: 40px;
 		justify-content: center;
