--- a/src/blocks/icon/styles/editor.scss
+++ b/src/blocks/icon/styles/editor.scss
@@ -132,7 +132,7 @@
 				&,
 				&:focus {
 					background: transparent;
-					box-shadow: 0 0 0 2px #fff, 0 0 0 4px #555d66;
+					box-shadow: 0 0 0 2px #fff, 0 0 0 4px $dark-gray-500;
 				}
 			}
 		}
