--- a/src/blocks/map/styles/editor.scss
+++ b/src/blocks/map/styles/editor.scss
@@ -4,7 +4,7 @@
 
 		.components-placeholder__fieldset {
 			span {
-				color: #555d66;
+				color: $dark-gray-500;
 			}
 
 			.components-button {
