--- a/src/components/background/styles/editor.scss
+++ b/src/components/background/styles/editor.scss
@@ -10,7 +10,7 @@
 		border: none;
 		border-radius: 0;
 		box-shadow: none;
-		color: #555d66;
+		color: $dark-gray-500;
 		cursor: pointer;
 		justify-content: flex-start;
 		outline: none;
