--- a/src/components/visual-dropdown/styles/editor.scss
+++ b/src/components/visual-dropdown/styles/editor.scss
@@ -208,7 +208,7 @@
 		max-width: 340px;
 
 		.editor-block-styles__item-label {
-			color: #555d66;
+			color: $dark-gray-500;
 			margin-top: 4px;
 			text-align: center;
 		}
