--- a/src/sidebars/block-manager/styles/editor.scss
+++ b/src/sidebars/block-manager/styles/editor.scss
@@ -122,7 +122,7 @@
 		word-break: break-word;
 
 		.coblocks-block-manager__button-icon {
-			color: #555d66;
+			color: $dark-gray-500;
 		}
 
 		.coblocks-block-manager__button-label {
