--- a/src/blocks/hero/styles/editor.scss
+++ b/src/blocks/hero/styles/editor.scss
@@ -159,17 +159,17 @@
 
 			&:hover {
 				background: #e3e4e7;
-				box-shadow: inset 0 0 0 1px #555d66, inset 0 0 0 2px $white;
+				box-shadow: inset 0 0 0 1px $dark-gray-500, inset 0 0 0 2px $white;
 			}
 
 			&:active:enabled {
 				background: #e3e4e7;
-				box-shadow: inset 0 0 0 1px #555d66, inset 0 0 0 2px $white;
+				box-shadow: inset 0 0 0 1px $dark-gray-500, inset 0 0 0 2px $white;
 			}
 
 			&:focus:enabled {
 				background: #e3e4e7;
-				box-shadow: inset 0 0 0 1px #555d66, inset 0 0 0 2px $white;
+				box-shadow: inset 0 0 0 1px $dark-gray-500, inset 0 0 0 2px $white;
 			}
 		}
 
@@ -178,10 +178,10 @@
 		}
 
 		.is-selected .components-button {
-			background: #555d66;
+			background: $dark-gray-500;
 
 			&:focus:enabled {
-				background: #555d66;
+				background: $dark-gray-500;
 			}
 		}
 
