--- a/src/components/block-gallery/styles/style.scss
+++ b/src/components/block-gallery/styles/style.scss
@@ -83,7 +83,7 @@ figcaption.coblocks-gallery--primary-caption {
 	text-align: center;
 
 	&:not(.has-caption-color) {
-		color: #555d66;
+		color: $dark-gray-500;
 	}
 }
 
