--- a/src/components/block-gallery/styles/style/_core-themes.scss
+++ b/src/components/block-gallery/styles/style/_core-themes.scss
@@ -32,7 +32,7 @@
 
 		&:not([class*="masonry"]) {
 			.coblocks-gallery:not(.has-caption-color) figcaption {
-				color: #555d66;
+				color: $dark-gray-500;
 			}
 		}
 	}
