--- a/src/components/size-control/styles/editor.scss
+++ b/src/components/size-control/styles/editor.scss
@@ -29,8 +29,8 @@
 			&,
 			&:focus,
 			&:active {
-				background: #555d66;
-				border-color: #555d66;
+				background: $dark-gray-500;
+				border-color: $dark-gray-500;
 				color: $white;
 				cursor: default;
 			}
