--- a/src/blocks/gist/styles/style.scss
+++ b/src/blocks/gist/styles/style.scss
@@ -1,14 +1,11 @@
 .wp-block-coblocks-gist {
-
 	.gist {
-
 		&-file {
-			border-radius: $accordion-border-radius !important;
 			border-color: rgba(0, 0, 0, 0.125) !important;
+			border-radius: 4px !important;
 			margin-bottom: 0 !important;
 
 			a {
-
 				&,
 				&:hover {
 					box-shadow: none;
@@ -43,7 +40,6 @@
 	}
 
 	&.no-meta {
-
 		.gist .gist-data {
 			border-bottom: 0;
 			border-radius: 3px;
