Tweak #0085ba to $blue

--- a/src/blocks/hero/styles/editor.scss
+++ b/src/blocks/hero/styles/editor.scss
@@ -28,7 +28,7 @@
 
 				&::before,
 				&::after {
-					background: #0085ba;
+					background: $blue;
 					content: "";
 					display: block;
 					height: 100%;
